might have finally fixed the overflow issue!

--- a/main.css
+++ b/main.css
@@ -56,6 +56,7 @@
   width: 10rem;
   margin: 1rem;
   background-color: green;
+  padding: 0.25rem 0.25rem 0 0.25rem;
 }
 
 .project-image {
@@ -92,6 +93,7 @@
     grid-template-rows: repeat(5, 1fr);
     grid-column-gap: px;
     grid-row-gap: 0px;
+    height: 100vh;
   }
   #header-container {
     grid-area: 1 / 1 / 5 / 2;
@@ -110,11 +112,15 @@
   #projects-container {
     grid-area: 1 / 2 / 6 / 5;
     flex-wrap: wrap;
+    overflow: hidden;
+    overflow-y: auto;
   }
   .project-container {
     /* width: 20vw;
     max-width: 15rem; */
     flex: 0 0 30%;
+    height: fit-content;
+    /* padding: 0.5rem 0.5rem 0 0.5rem; */
   }
   #footer-container {
     grid-area: 5 / 1 / 6 / 2;
